# nero

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.test  MRHACK_GLUE.md  README.md  pyproject.toml
config/: aruco_markers.example.json  aruco_markers.json  k1_geek_nominal_calibration.json  orbslam3_settings.yaml  vive_calibration.example.json
deploy/: modal_perception.py
deploy/systemd/: nero-vive-publisher.service  nero-vive-receiver.service  nero-vive-ros.service
deploy/vive_ros/: Dockerfile
docs/: aruco_navigation.md  projector-navigation-contract.md  vive_ros_handoff.md
mrhack/: __init__.py  bus.py  config.py  contracts.py
mrhack/actuator/: __init__.py  mock_robot.py  state_machine.py  velocity_id.py
mrhack/controller/: __init__.py  pure_pursuit.py
mrhack/localization/: __init__.py  frame_align.py
mrhack/planner/: __init__.py  plan.py
mrhack/procam/: README.md  context_snippets.py  follow_circle.py  frame_bridge.py  mapper.py  nav_bridge.py  procam_true.py  vive_bridge.py  vive_floor_cal.py
mrhack/projector/: __init__.py  renderer.py
mrhack/safety/: __init__.py  safety_circle.py
mrhack/sim/: __init__.py  kinematic_sim.py
scripts/: configure_k1_perception.sh  native_slam_smoke.py  run_booster_benchmark.sh  run_booster_studio.sh  run_rerun_bridge.sh  run_rerun_viewer.sh  run_robot_web.sh  setup_booster_studio.sh  setup_k1_runtime.sh  setup_object_detector.sh  setup_qnn_runtime.sh  test_docker.sh
src/nero/: __init__.py  interaction.py  k1_preflight.py  remote_command.py  robot.py  robot_web.py
src/nero/agents/: __init__.py  booster_studio_agent.py  goto_agent.py  map_nav_agent.py  mapping_agent.py  orb_slam_agent.py  perception_benchmark_agent.py  pure_pursuit_agent.py  sim_agent.py  sim_benchmark_agent.py  vive_pursuit_agent.py
src/nero/evaluation/: __init__.py  sim_reference.py
src/nero/mapping/: __init__.py  gaussian_splat.py  mapping_policy.py  trajectory_recorder.py
src/nero/navigation/: __init__.py  controller.py  global_localization.py  map_loader.py  map_policy.py  object_goal.py  path_planner.py  pointcloud_io.py  policy.py  pure_pursuit.py  runtime.py  safety.py  visual_odometry.py  vive_pursuit.py
src/nero/observability/: __init__.py  rerun_bridge.py  rerun_showcase.py  ros_publisher.py  topics.py
src/nero/perception/: __init__.py  ai_hub_profile.py  aruco_detector.py  depth_processor.py  detector_factory.py  modal_yolo_world.py  object_detector.py  qnn_artifact.py  qnn_deploy.py  qnn_smoke.py  qnn_worker.py  qnn_yolo_world.py  yolo_world_export.py
src/nero/projector/: __init__.py  app.py  calibration.py  camera.py  motion.py  navigation.py  operator_display.py  render.py  server.py  visual_editor.py
src/nero/simulation/: __init__.py  booster_studio.py  booster_studio_room.py  environment.py  mock_robot.py  sim_camera.py
src/nero/simulation/scenes/: __init__.py
src/nero/simulation/scenes/booster_studio_living_room/: LICENSE.txt  living_room_K1.extensions.xml  living_room_K1.xml
src/nero/simulation/scenes/industrial_storage_room/: README.md
src/nero/simulation/scenes/industrial_storage_room/assets/: industrial_storage_room.ply  industrial_storage_room_collider.glb
src/nero/simulation/scenes/main_room/: README.md
src/nero/simulation/scenes/main_room/assets/: main_room.ply  main_room_collider.glb
src/nero/slam/: __init__.py  imu_buffer.py  k1_calibration.py  map_manager.py  orb_slam3_node.py  pose_estimator.py  setup_orbslam.py
src/nero/utils/: __init__.py  camera_stream.py  pointcloud_converter.py  visualization.py
src/nero/vive/: README.md  __init__.py  pose_source.py  projector_navigation.py  rerun_stream.py  ros_bridge.py  udp_transport.py
starters/: calibrate.py  m6_demo.py  oakd_detect.py  realsense_capture.py  room_calib.py  sim_viz.py  vive_rerun.py
tests/: test_ai_hub_profile.py  test_aruco_detector.py  test_core.py  test_global_localization.py  test_k1_preflight.py  test_map_navigation_policy.py  test_mapping_components.py  test_modal_yolo_world.py  test_navigation_components.py  test_object_goal.py  test_object_navigation_policy.py  test_observability.py  test_projector.py  test_projector_vive.py  test_pure_pursuit.py  test_qnn_yolo_world.py  test_remote_command.py  test_robot_web.py  test_sim_reference.py  test_simulation.py  test_slam.py  test_vive_pursuit.py  test_vive_rerun_stream.py  test_vive_ros_bridge.py  test_vive_udp_transport.py
