[project]
name = "nero"
version = "0.1.0"
description = "ORB-SLAM3 navigation policy for Booster K1 robot"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0,<4.12.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "booster-robotics-sdk-python==1.5.6; sys_platform == 'linux'",
    "orbslam3-python==2.0.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
viz = ["rerun-sdk==0.22.1"]
ai-hub = [
    "clip @ git+https://github.com/ultralytics/CLIP.git@a57ec09a1668b6a5905ff323d734701f8d11d0e2",
    "onnx>=1.17,<2",
    "onnxruntime>=1.20,<2",
    "qai-hub==0.52.0",
    "torch>=2.5,<3",
    "ultralytics==8.3.228",
]

[dependency-groups]
dev = [
    "pytest>=7.0,<8.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
nero-orb-slam = "nero.agents.orb_slam_agent:main"
nero-pure-pursuit = "nero.agents.pure_pursuit_agent:main"
nero-sim = "nero.agents.sim_agent:main"
nero-booster-studio = "nero.agents.booster_studio_agent:main"
nero-sim-benchmark = "nero.agents.sim_benchmark_agent:main"
nero-perception-benchmark = "nero.agents.perception_benchmark_agent:main"
nero-mapping = "nero.agents.mapping_agent:main"
nero-map-nav = "nero.agents.map_nav_agent:main"
nero-pc2map = "nero.utils.pointcloud_converter:main"
nero-k1-calibration = "nero.slam.k1_calibration:main"
nero-setup-orbslam = "nero.slam.setup_orbslam:main"
nero-setup-booster-room = "nero.simulation.booster_studio_room:main"
nero-rerun = "nero.observability.rerun_bridge:main"
nero-command = "nero.remote_command:main"
nero-command-relay = "nero.remote_command:relay_main"
nero-vive-rerun = "nero.vive.rerun_stream:main"
nero-vive-udp-send = "nero.vive.udp_transport:publisher_main"
nero-vive-udp-receive = "nero.vive.udp_transport:receiver_main"
nero-vive-ros = "nero.vive.ros_bridge:main"
nero-export-yolo-world = "nero.perception.yolo_world_export:main"
nero-ai-hub-profile = "nero.perception.ai_hub_profile:main"
nero-install-qnn-model = "nero.perception.qnn_artifact:main"
nero-deploy-qnn-model = "nero.perception.qnn_deploy:main"
nero-qnn-smoke = "nero.perception.qnn_smoke:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
